AI-JADEDEVS4/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>AVP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up field to SFDC User</description>
        <inlineHelpText>Look up field to SFDC User. If the user isn&apos;t in SFDC you won&apos;t find them!</inlineHelpText>
        <label>Mid-Ent AVP</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Response__c</fullName>
        <formula>( NumberOfLeads + NumberOfContacts + NumberOfConvertedLeads ) /  NumberSent</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>total( leads + converted leads + contacts) / number sent</inlineHelpText>
        <label>Actual Response (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Add_to_Customer_Log_In_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Check if needs to be added to customer log in page</inlineHelpText>
        <label>Add to Customer Log In Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_to_Website_Home_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Check if needs to be added to the website home page</inlineHelpText>
        <label>Add to Website Home Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <description>Agenda of event</description>
        <inlineHelpText>Agenda of event. This can be formatted using simple HTML code</inlineHelpText>
        <label>Agenda</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attended_Elq_Email_Template__c</fullName>
        <description>Link to the Eloqua Attended Email.</description>
        <inlineHelpText>Link to the Eloqua Attended Email.</inlineHelpText>
        <label>Attended Elq Email Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blog_Entries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign Project Details</description>
        <inlineHelpText>Check if there is a blog entry with this campaign</inlineHelpText>
        <label>Blog Entries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blog_Post_Date_2__c</fullName>
        <description>A request for a second blog posting</description>
        <label>Blog Post Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blog_Post_Date__c</fullName>
        <description>The date which the blog entry is schedule to post</description>
        <label>Blog Post Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bounce_Backs__c</fullName>
        <inlineHelpText>Number of Bounce Backs</inlineHelpText>
        <label>Bounce Backs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAM_Email__c</fullName>
        <label>SMB Email:</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAM_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMB Name:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPE_Credits__c</fullName>
        <description>Number of CPE Credits for the event</description>
        <inlineHelpText>Number of CPE Credits for the event</inlineHelpText>
        <label>CPE Credits</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPO__c</fullName>
        <description>Cost Per NAO. Requested by Tori Cole, 2/1/16</description>
        <inlineHelpText>Cost per NAO.</inlineHelpText>
        <label>CPO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign_Attachment__c</fullName>
        <description>If you need to reference a document for this campaign, enter the linking url here</description>
        <label>Campaign Attachment</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Campaign_Click_Throughs__c</fullName>
        <description>Clicks or equivalent action as reported by publisher, list owner, etc.  NOTE that this IS NOT the same as number of Visits to AP site. We typically see up to 50% dropoff from publisher reported Clicks to actual Visits to the site.</description>
        <inlineHelpText>Clicks or equivalent action as reported by publisher, list owner, etc.  NOTE that this IS NOT the same as number of Visits to AP site. We typically see up to 50% dropoff from publisher reported Clicks to actual Visits to the site.</inlineHelpText>
        <label>Campaign Click-Throughs</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Creative_Invitation__c</fullName>
        <description>Invitation or creative for the campaign</description>
        <label>Campaign Creative/Invitation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_ID_18_digit__c</fullName>
        <description>SFDC Campaign 18 digit ID</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>SFDC Campaign 18 digit ID</inlineHelpText>
        <label>Campaign ID (18 digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Landing_Page__c</fullName>
        <description>This is a link to the landing page for the campaign</description>
        <label>Campaign Landing Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Lead_Offer__c</fullName>
        <description>Matches Lead Offer</description>
        <label>Campaign Lead Offer</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive Consolidation eBook (Oct 2013)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Contact Me Form - NetSuite Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Demo Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials NetSuite Module Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Online Module Trial Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptive myDials Webinar Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI Pre-Recorded Online Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Customer Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express Downloaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Express Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Live Demo Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Consolidation Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Discovery Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Online Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Pre-Recorded Prospect Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Survival Kit Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article: Art of Quantation (Randall Bolton)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article: Natural PL Characteristics (Randall Bolton)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Article – CFO Get IT Right Or Get Left Behind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Software WP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case study - Docusign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case study – Goodwill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study Kit - 2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study – Papyrus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case Study - Red Cross</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Opens__c</fullName>
        <inlineHelpText>Number of opens as reported by the publisher, list owner, or equivalent.  Used to determine effectiveness of List and Subject Line combination</inlineHelpText>
        <label>Campaign Opens</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Partner_1__c</fullName>
        <label>Campaign Partner 1</label>
        <picklist>
            <picklistValues>
                <fullName>123ConnectA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abacist Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abacus Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accelcia Business Services, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountemps/RHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCPAC International, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accretive (TX - Horn Murdock Cole)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accretive Solutions Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACT Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP (New England Partner)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP (So San Francisco)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aim-Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alliance of Merger &amp; Acquisition Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha CPM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Massage and Therapeutic Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American United Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analitikal (Grupo Ethos)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andree Dupree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APD, Wholesale Distribution Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Analytix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archetype Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arete Resource Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arxis Technology, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspen Associates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AtlasBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiomatic Design Software, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axis Accounting Systems, Inc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axis Group, LLC (SEE White Light)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banking Syndicators of America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Sales_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Sales Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <description>Lead Source for Campaign</description>
        <inlineHelpText>This is supposed to be the channel which we&apos;re sourcing the lead from,  additional we&apos;re putting in the specific List for 3rd party mailing as marketing evolves</inlineHelpText>
        <label>Campaign Source</label>
        <picklist>
            <picklistValues>
                <fullName>Aberdeen Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountancy Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFP (Association of Financial Professionals)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP House (Clean)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP House (Combined)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP House (Purchased List)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP Web Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEN Non Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI This Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPB Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBSi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO Bulletin Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO Daily News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chronicle of Philanthrophy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMA UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edgar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPIC Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Bulletin Newsletter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Toolbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Watch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Subject_Line__c</fullName>
        <description>Subject Line for Invitation for campaign - if applies</description>
        <label>Campaign Subject Line</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Type_Reportng__c</fullName>
        <description>This is a sub campaign type for reporting purposes</description>
        <inlineHelpText>This is a sub campaign type for reporting purposes</inlineHelpText>
        <label>Campaign Type Reportng</label>
        <picklist>
            <picklistValues>
                <fullName>ACCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountancy Age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertisement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biz Finance Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BrightTalk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close-Reference Conference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emedia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Watch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harte-Hanks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICAEW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InsideView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insight24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live/Roadshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live User Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurture Whitepaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Study_Due_Date__c</fullName>
        <description>When does the Case Study need to be completed by</description>
        <label>Case Study Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case_Study_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Person responsible for the case study</inlineHelpText>
        <label>Case Study Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Case Study Owner)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Check if a case study is needed</inlineHelpText>
        <label>Case Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Click_through_Rate__c</fullName>
        <formula>Campaign_Click_Throughs__c / Campaign_Opens__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>number click through/ number of opens</inlineHelpText>
        <label>Click-through Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Lead__c</fullName>
        <description>Actual Cost divided by Number of Leads. If Actual Cost is blank, then Budgeted Cost divided by Number of Leads.</description>
        <formula>if (NumberOfLeads=0, ActualCost,

IF(  ActualCost /  NumberOfLeads &gt;0, ActualCost / NumberOfLeads, BudgetedCost / NumberOfLeads)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Cost divided by Number of Leads. If Actual Cost is blank, then Budgeted Cost divided by Number of Leads.</inlineHelpText>
        <label>Cost Per Lead</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Opp__c</fullName>
        <formula>ActualCost / NumberOfOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Opp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Target__c</fullName>
        <formula>if ( Target_count__c =0, ActualCost, 
if (  ISNULL(Target_count__c) , ActualCost, 
IF( ActualCost / Target_count__c  &gt;0, ActualCost / Target_count__c , BudgetedCost / Target_count__c ) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Per_Win__c</fullName>
        <formula>ActualCost / NumberOfWonOpportunities</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Win</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Custome_ROI__c</fullName>
        <inlineHelpText>This field is updated by the S-control, that which sums the &quot;value&quot; of the contacts that are in the campaign.</inlineHelpText>
        <label>Custom ROI</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Login_Due_Date__c</fullName>
        <description>Day that the update to the Customer Login page should go live</description>
        <label>Customer Login Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Speaker_Company_Name__c</fullName>
        <description>Company name of customer speaker</description>
        <inlineHelpText>Company name of customer speaker</inlineHelpText>
        <label>Customer Speaker: Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Speaker_Confirmed__c</fullName>
        <description>Is the customer speaker confirmed?</description>
        <inlineHelpText>Is the customer speaker confirmed? (N/A = Not Applicable)</inlineHelpText>
        <label>Customer Speaker: Confirmed?</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Speaker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Speaker: Full Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Customer Speaker: Full Name)</relationshipLabel>
        <relationshipName>Campaigns_Customer_Speaker_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Speaker_Due_Date__c</fullName>
        <description>when do we need to finalize the Customer Speaker by</description>
        <label>Customer Speaker Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Speaker_Full_Name__c</fullName>
        <description>Customer speaker&apos;s full name</description>
        <inlineHelpText>Customer speaker&apos;s full name</inlineHelpText>
        <label>Customer Speaker: Full Name-Old</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Speaker_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Contact lookup for customer speaker name</inlineHelpText>
        <label>Customer Speaker Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Campaigns (Customer Speaker Name)</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Speaker_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Who&apos;s responsible for securing the customer speaker</inlineHelpText>
        <label>Customer Speaker Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Speaker_Title__c</fullName>
        <description>Customer speaker title</description>
        <inlineHelpText>Customer speaker title</inlineHelpText>
        <label>Customer Speaker: Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Check is customer speaker is needed</inlineHelpText>
        <label>Customer Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOR_Email_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MarOps Check List</description>
        <inlineHelpText>The Date of Reminder Email has been created. This is updated by the Campaign Owner.</inlineHelpText>
        <label>DOR Email Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Sheet_Due_Date__c</fullName>
        <description>When does the Data Sheet need to be completed by</description>
        <label>Data Sheet Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campaign Project Detail</description>
        <inlineHelpText>Check if a data sheet is associated with this project</inlineHelpText>
        <label>Data Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Cloned__c</fullName>
        <description>Date/Time stamp when campaign was cloned</description>
        <inlineHelpText>Date/Time stamp when campaign was cloned</inlineHelpText>
        <label>Date Cloned</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Demo_Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Adaptive person doing the demo</description>
        <inlineHelpText>Lookup to Adaptive person doing the demo</inlineHelpText>
        <label>Demo Presenter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Drupal_Node_Number__c</fullName>
        <description>This is for the new website. This records the node number in Drupal so we can match it up to the new website.</description>
        <inlineHelpText>This is for the new website. This records the node number in Drupal so we can match it up to the new website.</inlineHelpText>
        <label>Drupal Node Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drupal_Website_URL__c</fullName>
        <description>URL to access the local event on the new Adaptive Insights website (via drupal)</description>
        <inlineHelpText>URL to access the local event on the new Adaptive Insights website (via drupal)</inlineHelpText>
        <label>Drupal Website URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Start_Time__c  -  End_Time__c</formula>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dynamic_Content_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marketing Ops Checklist</description>
        <inlineHelpText>The Dynamic Content has been created in Eloqua. Updated by Marketing Ops.</inlineHelpText>
        <label>Dynamic Content Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Edit_Delete_URL__c</fullName>
        <description>Creates edit and delete links to a campaign</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id &amp; &quot;/e&quot;, &quot;Edit&quot;) &amp; &quot; | &quot; &amp; HYPERLINK(&quot;/setup/own/deleteredirect.jsp?delID=&quot; &amp; Id, &quot;Del&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Edit-Delete URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elq_Link_to_Email_Test__c</fullName>
        <description>Link to Eloqua email Test</description>
        <inlineHelpText>Link to Eloqua email Test</inlineHelpText>
        <label>Elq Link to Email Test</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Elq_Other_Filers__c</fullName>
        <description>Count excluded by other filters (including Canadian non-opted in names)</description>
        <inlineHelpText>Count excluded by other filters (including Canadian non-opted in names)</inlineHelpText>
        <label>Elq Other Filters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Elq_Other_Filters_Details__c</fullName>
        <description>Additional information about the different segmentation of additional names being sent webinar emails.</description>
        <inlineHelpText>Additional information about the different segmentation of additional names being sent webinar emails.</inlineHelpText>
        <label>Elq Other Filters Details</label>
        <type>TextArea</type>
    </fields>
</CustomObject>